edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;

// Next Tag: 7
message Blob {
  string name = 1; // @gotags: sql:"pk" search:"Blob Name"
  uint32 oid = 2;
  string checksum = 3;
  int64 length = 4; // @gotags: search:"Blob Length"
  google.protobuf.Timestamp last_updated = 5;
  google.protobuf.Timestamp modified_time = 6; // @gotags: search:"Blob Modified On"
}
